--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
+    "world-countries": "^5.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
