--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "use-debounce": "^10.0.4",
     "uuid": "^11.0.3",
     "world-countries": "^5.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.15",
